# portrackr

./: components.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml  main.yml
src/: App.tsx  index.css  main.tsx  reset.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/@/components/compose/: AboutButtonPopover.tsx  FeedbackButtonPopover.tsx  ProcessInfoSheet.tsx  ReadyToUseAppDialog.tsx  SearchInput.tsx  TerminateProcessDialog.tsx
src/@/components/compose/process-info/: ProcessInfoButton.tsx
src/@/components/compose/process-table-row/: ProcessTableRow.tsx
src/@/components/compose/settings/: SettingsButtonPopover.tsx  SettingsContent.tsx
src/@/components/compose/theme/: ThemeToggleVisual.tsx  theme-provider.tsx
src/@/components/ui/: alert-dialog.tsx  button.tsx  checkbox.tsx  input.tsx  popover.tsx  select.tsx  table.tsx  textarea.tsx  tooltip.tsx
src/@/hooks/: useLocalStorage.ts
src/@/lib/: utils.ts
src/api/: index.ts
src/components/home/: Home.tsx
src/components/layout/: LeftPanel.tsx
src/components/license/: LicenseKeyEntry.tsx  LicenseKeyProvider.tsx
src/components/setting/: Setting.tsx  index.tsx
src/store/: index.ts
